--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -152,6 +152,22 @@ table {
 #PORTAL_VERA_WIDGET:hover {
   transform: translateX(-5px);
 }
+#PORTAL_VERA_WIDGET.join:after {
+  content: '';
+  display: block;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: 2px dotted #5c46e3;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/invite.svg');
+  position: absolute;
+  right: -50px;
+  top: 50%;
+  animation: AniFloating 1s infinite alternate;
+}
 #PORTAL_VERA_WIDGET > .portal_logo {
   width: 40px;
   height: 40px;
@@ -162,6 +178,14 @@ table {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+}
+@keyframes AniFloating {
+  from {
+    transform: translateY(-50%) scale(0.6);
+  }
+  to {
+    transform: translateY(-50%) scale(1.1);
+  }
 }
 #PORTAL_VERA_INVITE {
   color: #fff;
@@ -181,7 +205,10 @@ table {
   background: #5c46e3;
 }
 #PORTAL_VERA_INVITE:hover .title {
-  color: #eee;
+  color: #eee !important;
+}
+#PORTAL_VERA_INVITE:hover .copyright {
+  visibility: visible !important;
 }
 #PORTAL_VERA_INVITE:hover .cameras .camera {
   border-color: #eee;
@@ -247,10 +274,16 @@ table {
   color: #5c46e3;
 }
 #PORTAL_VERA_INVITE .intro {
-  padding: 5px 0;
+  padding-top: 10px;
 }
-#PORTAL_VERA_INVITE .intro > .title {
-  font-size: 24px;
+#PORTAL_VERA_INVITE .intro .copyright {
+  visibility: hidden;
+  display: flex;
+  margin-top: 10px;
+  font-size: 10px;
+  flex-direction: column;
+  line-height: 1.5;
+  color: #ccc;
 }
 #PORTAL_VERA_INVITE .cameras {
   overflow: hidden;
