--- a/public/crx/vera/style/camera.less
+++ b/public/crx/vera/style/camera.less
@@ -92,13 +92,13 @@
       }
     }
     // 关闭态
-    &[bg-remove='true'] .opts .opt.bg {
+    &[bg='true'] .opts .opt.bg {
       background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.off.svg');
     }
-    &[invisible='true'] .opts .opt.video {
+    &[video='true'] .opts .opt.video {
       background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.off.svg');
     }
-    &[muted='true'] .opts .opt.audio {
+    &[audio='true'] .opts .opt.audio {
       background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.off.svg');
     }
     &[pin='true'] .opts .opt.pin {
@@ -142,7 +142,7 @@
         color: #ec3636;
       }
     }
-    &[invisible='true'] .mask.user {
+    &[video='true'] .mask.user {
       display: block;
     }
   }
