--- a/public/crx/vera/style/invite.less
+++ b/public/crx/vera/style/invite.less
@@ -93,10 +93,13 @@
       display: flex;
       margin-top: 10px;
       font-size: 10px;
-
+      color: #fff;
       flex-direction: column;
       line-height: 1.5;
       color: #ccc;
+      a {
+        color: inherit;
+      }
     }
   }
 
