--- a/public/crx/vera/style/camera.less
+++ b/public/crx/vera/style/camera.less
@@ -78,28 +78,28 @@
           opacity: 1;
         }
         &.bg {
-          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.svg');
+          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.off.svg');
         }
         &.video {
-          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.on.svg');
+          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.off.svg');
         }
         &.audio {
-          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.on.svg');
+          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.off.svg');
         }
         &.pin {
           background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/pin.svg');
         }
       }
     }
-    // 关闭态
+    // 打开态
     &[bg='true'] .opts .opt.bg {
-      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.off.svg');
+      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.svg');
     }
     &[video='true'] .opts .opt.video {
-      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.off.svg');
+      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.on.svg');
     }
     &[audio='true'] .opts .opt.audio {
-      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.off.svg');
+      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.on.svg');
     }
     &[pin='true'] .opts .opt.pin {
       background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/pin.off.svg');
@@ -129,7 +129,7 @@
       background-repeat: no-repeat;
       background-position: center;
       &.user {
-        display: none;
+        // display: none;
         background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/user.svg');
       }
       &.error {
@@ -143,7 +143,7 @@
       }
     }
     &[video='true'] .mask.user {
-      display: block;
+      display: none;
     }
   }
   .invite {
