--- a/public/crx/vera/style/camera.css
+++ b/public/crx/vera/style/camera.css
@@ -14,13 +14,13 @@
   margin-bottom: 10px;
 }
 .camera[bg-rm-status='processing'] canvas {
-  visibility: hidden;
+  display: none;
 }
 .camera[bg-rm-status='processing'] .processing {
   display: block;
 }
 .camera[bg-rm-status='restore'] canvas {
-  visibility: hidden;
+  display: none;
 }
 .camera[bg-rm-status='ready'] .processing {
   display: none;
@@ -29,8 +29,8 @@
   visibility: hidden;
 }
 .camera .processing {
-  display: none;
   z-index: 10;
+  display: none;
   text-transform: capitalize;
   position: absolute;
   top: 50%;
@@ -46,8 +46,8 @@
   position: relative;
 }
 .camera .video .opts {
-  visibility: hidden;
-  z-index: 11;
+  z-index: 7;
+  display: none;
   position: absolute;
   right: 5px;
   top: 5px;
@@ -101,7 +101,6 @@
   height: 200px;
 }
 .camera .video canvas {
-  z-index: 9;
   width: 200px;
   height: 200px;
   position: absolute;
@@ -112,6 +111,7 @@
   display: none;
 }
 .camera .video .mask {
+  z-index: 6;
   width: 200px;
   height: 200px;
   position: absolute;
@@ -136,11 +136,10 @@
   display: none;
 }
 .camera .invite {
-  z-index: 11;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate3d(-50%, -60%, 0);
+  transform: translate3d(-50%, -50%, 0);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -177,7 +176,7 @@
 }
 .camera[camera-status='connected'] .controls,
 .camera[camera-status='connected'] .opts {
-  visibility: visible;
+  display: flex;
 }
 .camera[camera-status='connected'] .invite {
   display: none;
@@ -187,4 +186,9 @@
 }
 .camera[camera-status='allow-error'] .mask.error {
   display: flex;
+}
+.camera.remote .video .opts .bg,
+.camera.remote .video .opts .video,
+.camera.remote .video .opts .audio {
+  display: none;
 }
