refactor: break features into small class

--- a/public/crx/vera/style.less
+++ b/public/crx/vera/style.less
@@ -2,5 +2,5 @@
 @import (inline) './style/reset.css';
 // widget
 @import './style/widget.less';
-// invite panel
-@import './style/invite.less';
+// panel
+@import './style/panel.less';
