--- a/public/crx/vera/style/camera.css
+++ b/public/crx/vera/style/camera.css
@@ -10,6 +10,9 @@
   border: 1px dashed #5c46e3;
   background: none;
 }
+.camera.host {
+  border-style: solid;
+}
 .camera:not(:last-child) {
   margin-bottom: 10px;
 }
@@ -135,42 +138,6 @@
 .camera .video[video='true'] .mask.user {
   display: none;
 }
-.camera .invite {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate3d(-50%, -50%, 0);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.camera .invite .btn {
-  white-space: nowrap;
-  margin-bottom: 10px;
-  border: 1px solid #fff;
-  background-color: #5c46e3;
-  color: #fff;
-  border-radius: 4px;
-  padding: 4px 10px;
-  font-size: 22px;
-  cursor: pointer;
-}
-.camera .invite .link {
-  padding: 4px;
-  border: 1px solid #eee;
-  background: rgba(2, 2, 2, 0.4);
-  color: #fff;
-  font-size: 10px;
-  width: 100%;
-  height: fit-content;
-  white-space: pre-wrap;
-  word-break: break-word;
-  text-align: left;
-  line-height: 1.2;
-  max-height: 90px;
-  overflow: scroll;
-}
 .camera[camera-status='connected'] .btn {
   display: none;
 }
@@ -186,9 +153,4 @@
 }
 .camera[camera-status='allow-error'] .mask.error {
   display: flex;
-}
-.camera.remote .video .opts .bg,
-.camera.remote .video .opts .video,
-.camera.remote .video .opts .audio {
-  display: none;
 }
