--- a/public/crx/vera/style/camera.less
+++ b/public/crx/vera/style/camera.less
@@ -3,7 +3,6 @@
   border-radius: 8px;
   position: relative;
   width: fit-content;
-  // height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,6 +10,12 @@
   padding: 5px;
   border: 1px dashed #5c46e3;
   background: none;
+  &.host {
+    border-style: solid;
+  }
+  //   &.remote{
+  // border: 1px dashed #5c46e3;
+  //   }
   &:not(:last-child) {
     margin-bottom: 10px;
   }
@@ -52,6 +57,12 @@
   .video {
     position: relative;
 
+    // .cover_opts {
+    //   position: absolute;
+    //   right: 5px;
+    //   top: 5px;
+    //   z-index: 8;
+    // }
     .opts {
       z-index: 7;
       display: none;
@@ -146,42 +157,7 @@
       display: none;
     }
   }
-  .invite {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    .btn {
-      white-space: nowrap;
-      margin-bottom: 10px;
-      border: 1px solid #fff;
-      background-color: #5c46e3;
-      color: #fff;
-      border-radius: 4px;
-      padding: 4px 10px;
-      font-size: 22px;
-      cursor: pointer;
-    }
-    .link {
-      padding: 4px;
-      border: 1px solid #eee;
-      background: rgba(2, 2, 2, 0.4);
-      color: #fff;
-      font-size: 10px;
-      width: 100%;
-      height: fit-content;
-      white-space: pre-wrap;
-      word-break: break-word;
-      text-align: left;
-      line-height: 1.2;
-      max-height: 90px;
-      overflow: scroll;
-    }
-  }
+
   &[camera-status='connected'] {
     .btn {
       display: none;
@@ -202,11 +178,11 @@
       display: flex;
     }
   }
-  &.remote .video .opts {
-    .bg,
-    .video,
-    .audio {
-      display: none;
-    }
-  }
+  // &.remote .video .opts {
+  //   .bg,
+  //   .video,
+  //   .audio {
+  //     display: none;
+  //   }
+  // }
 }
