--- a/public/crx/vera/style/join.less
+++ b/public/crx/vera/style/join.less
@@ -1,4 +1,4 @@
-.invite {
+.join {
   width: 200px;
   display: flex;
   flex-direction: column;
@@ -16,20 +16,5 @@
     padding: 4px 10px;
     font-size: 22px;
     cursor: pointer;
-  }
-  .link {
-    padding: 4px;
-    border: 1px solid #eee;
-    background: rgba(2, 2, 2, 0.4);
-    color: #fff;
-    font-size: 10px;
-    width: 100%;
-    height: fit-content;
-    white-space: pre-wrap;
-    word-break: break-word;
-    text-align: left;
-    line-height: 1.2;
-    max-height: 90px;
-    overflow: scroll;
   }
 }
