--- a/public/crx/vera/style/widget.css
+++ b/public/crx/vera/style/widget.css
@@ -3,7 +3,7 @@
   z-index: 999;
   position: fixed;
   left: 0;
-  bottom: 10px;
+  bottom: 30px;
   width: 60px;
   height: 50px;
   background-color: #5c46e3;
@@ -45,6 +45,18 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+}
+#PORTAL_VERA_WIDGET > .username {
+  position: absolute;
+  bottom: -20px;
+  left: 20px;
+  border-radius: 5px;
+  font-size: 10px;
+  border: 1px solid #eee;
+  background-color: #333;
+  color: #fff;
+  padding: 2px 5px;
+  line-height: 1.1;
 }
 @keyframes AniFloating {
   from {
