feat: append vera history when connected in ext

--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -182,7 +182,7 @@ table {
 #PORTAL_VERA_WIDGET > .username {
   position: absolute;
   bottom: -20px;
-  left: 0;
+  left: 20px;
   border-radius: 5px;
   font-size: 10px;
   border: 1px solid #eee;
