--- a/public/crx/vera/style/camera.less
+++ b/public/crx/vera/style/camera.less
@@ -72,6 +72,7 @@
       padding: 5px;
       display: flex;
       .opt {
+        padding: 0;
         opacity: 0.6;
         border: 1px solid #5c46e3;
         border-radius: 4px;
