--- a/public/crx/vera/style/camera.less
+++ b/public/crx/vera/style/camera.less
@@ -10,7 +10,7 @@
   padding: 5px;
   border: 1px dashed #5c46e3;
   background: none;
-  &.host {
+  &.local {
     border-style: solid;
   }
   //   &.remote{
