--- a/public/crx/vera/style/widget.less
+++ b/public/crx/vera/style/widget.less
@@ -47,6 +47,7 @@
     background-position: center;
   }
   > .username {
+    white-space: nowrap;
     position: absolute;
     bottom: -20px;
     left: 20px;
