--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -180,6 +180,7 @@ table {
   background-position: center;
 }
 #PORTAL_VERA_WIDGET > .username {
+  white-space: nowrap;
   position: absolute;
   bottom: -20px;
   left: 20px;
@@ -217,6 +218,9 @@ table {
   padding: 15px 10px;
   border: 4px solid #5c46e3;
   transition: all 0.4s ease-in-out;
+}
+#PORTAL_VERA_PANEL.host {
+  border-color: khaki;
 }
 #PORTAL_VERA_PANEL:hover {
   background: #5c46e3;
@@ -321,7 +325,7 @@ table {
   border: 1px dashed #5c46e3;
   background: none;
 }
-#PORTAL_VERA_PANEL .cameras .camera.host {
+#PORTAL_VERA_PANEL .cameras .camera.local {
   border-style: solid;
 }
 #PORTAL_VERA_PANEL .cameras .camera:not(:last-child) {
