--- a/public/crx/vera/style/panel.css
+++ b/public/crx/vera/style/panel.css
@@ -17,6 +17,9 @@
   border: 4px solid #5c46e3;
   transition: all 0.4s ease-in-out;
 }
+#PORTAL_VERA_PANEL.host {
+  border-color: khaki;
+}
 #PORTAL_VERA_PANEL:hover {
   background: #5c46e3;
 }
@@ -120,7 +123,7 @@
   border: 1px dashed #5c46e3;
   background: none;
 }
-#PORTAL_VERA_PANEL .cameras .camera.host {
+#PORTAL_VERA_PANEL .cameras .camera.local {
   border-style: solid;
 }
 #PORTAL_VERA_PANEL .cameras .camera:not(:last-child) {
@@ -168,6 +171,7 @@
   display: flex;
 }
 #PORTAL_VERA_PANEL .cameras .camera .video .opts .opt {
+  padding: 0;
   opacity: 0.6;
   border: 1px solid #5c46e3;
   border-radius: 4px;
