--- a/public/crx/vera/style/panel.less
+++ b/public/crx/vera/style/panel.less
@@ -17,6 +17,9 @@
   padding: 15px 10px;
   border: 4px solid #5c46e3;
   transition: all 0.4s ease-in-out;
+  &.host {
+    border-color: khaki;
+  }
   &:hover {
     background: #5c46e3;
     .title {
