--- a/public/crx/vera/style/widget.css
+++ b/public/crx/vera/style/widget.css
@@ -47,6 +47,7 @@
   background-position: center;
 }
 #PORTAL_VERA_WIDGET > .username {
+  white-space: nowrap;
   position: absolute;
   bottom: -20px;
   left: 20px;
