--- a/public/crx/vera/style/panel.css
+++ b/public/crx/vera/style/panel.css
@@ -5,9 +5,8 @@
   flex-direction: column;
   align-items: center;
   position: fixed;
-  top: 50%;
+  top: 35px;
   right: 0;
-  transform: translateY(-50%);
   min-width: 100px;
   min-height: 200px;
   max-height: 100vh;
@@ -15,7 +14,6 @@
   background: transparent;
   padding: 15px 10px;
   border: 4px solid #5c46e3;
-  transition: all 0.4s ease-in-out;
 }
 #PORTAL_VERA_PANEL.host {
   border-color: khaki;
@@ -178,6 +176,7 @@
   background-color: #5c46e3;
   height: 22px !important;
   width: 22px !important;
+  min-width: unset;
   background-size: 70%;
   background-repeat: no-repeat;
   background-position: center;
