--- a/public/crx/vera/style/panel.less
+++ b/public/crx/vera/style/panel.less
@@ -6,9 +6,9 @@
   flex-direction: column;
   align-items: center;
   position: fixed;
-  top: 50%;
+  top: 35px;
   right: 0;
-  transform: translateY(-50%);
+  // transform: translateY(-50%);
   min-width: 100px;
   min-height: 200px;
   max-height: 100vh;
@@ -16,7 +16,7 @@
   background: transparent;
   padding: 15px 10px;
   border: 4px solid #5c46e3;
-  transition: all 0.4s ease-in-out;
+
   &.host {
     border-color: khaki;
   }
