--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -142,9 +142,9 @@ table {
   background-color: #5c46e3;
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
-  padding: 5px;
+  padding: 5px 5px 5px 0;
   transform: translateX(-20px);
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
 }
@@ -192,11 +192,12 @@ table {
   line-height: 1.1;
 }
 #PORTAL_VERA_WIDGET > .drag {
+  border-radius: 4px;
   width: 12px;
   height: 30px;
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/drag-vertical.svg');
   background-size: cover;
-  background-color: rgba(238, 238, 238, 0.5);
+  background-color: rgba(238, 238, 238, 0.4);
   background-repeat: no-repeat;
   background-position: center;
 }
