--- a/public/crx/vera/style/camera.less
+++ b/public/crx/vera/style/camera.less
@@ -79,6 +79,7 @@
         background-color: #5c46e3;
         height: 22px !important;
         width: 22px !important;
+        min-width: unset;
         background-size: 70%;
         background-repeat: no-repeat;
         background-position: center;
